--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Asrafil Ambia</title>
   </head>
   <body>
-      <script languange="JavaScript">document.write("Belajar Pemrograman JavaScript</script>
+      <script languange="JavaScript">document.write("Belajar Pemrograman JavaScript!");</script>
   </body>
 </html>
