--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Asrafil Ambia</title>
   </head>
   <body>
-      <script languange="JavaScript">document.write("Belajar Pemrograman JavaScript!");</script>
+      <script language="JavaScript">document.write("Belajar Pemrograman JavaScript!");</script>
+      <script language="JavaScript" src="isi.js"></script>
   </body>
 </html>
