--- a/index.html
+++ b/index.html
@@ -6,6 +6,23 @@
   <body>
       <script language="JavaScript" src="isi.js"></script>
     <p>
+  <script language="JavaScript">
+      function namaAnda() {
+      let nama = prompt("Asrafil");
+        if (nama != null) {
+          alert("Halo " + nama + "!");
+      }
+      }
+  </script>
+
+    <form name="Penghitung">
+    <h1>Memasukkan data lewat prompt</h1>
+
+    <input type="button" value="Asrafil" onclick="namaAnda()"/>
+    </form>
+    </p>
+    
+    <p>
       <script language="JavaScript">
         document.writeln("<pre>");
         document.writeln("<h1>Operasi Matematika Dasar</h1>");
