--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <form name="Penghitung">
     <h1>Memasukkan data lewat prompt</h1>
 
-    <input type="button" value="Asrafil" onclick="namaAnda()"/>
+    <input type="button" value="Nama" onclick="namaAnda()"/>
     </form>
     </p>
     
