--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <p>
   <script language="JavaScript">
       function namaAnda() {
-      let nama = prompt("Asrafil");
+      let nama = prompt("Masukkan Nama Anda");
         if (nama != null) {
-          alert("Halo " + nama + "!");
+          alert("Halo " + nama + "Cantik");
       }
       }
   </script>
@@ -18,7 +18,7 @@
     <form name="Penghitung">
     <h1>Memasukkan data lewat prompt</h1>
 
-    <input type="button" value="Nama" onclick="namaAnda()"/>
+    <input type="button" value="Masukkan Nama" onclick="namaAnda()"/>
     </form>
     </p>
     
