--- a/index.html
+++ b/index.html
@@ -39,5 +39,33 @@
         document.writeln("<pre>");
       </script>
     </p>
+
+    <p>
+      <script language="JavaScript">
+
+      function jumlah()
+        {
+          var bil1 = parseFloat(document.Penghitung.bilangan1.value);
+          if (isNan (bil1))
+          bil1=0.0;
+          var bil2 = parseFloat(document.Penghitung.bilangan2.value);
+          if (isNaN (bil2))
+          bil2=0.0;
+          var hasil = bil1 + bil2;
+          console.log("hasil Penjumlahan = " + hasil);
+        }
+      </script>
+
+      <form name="Penghitung">
+        <h1>Massukan data via form</h1>
+
+        <pre>
+          Bilangan Pertama :<input type="text" size="11" name"bilangan1"/>
+          Bilangan Kedua :<input type="text" size="11" name"bilangan2"/>
+        </pre>
+
+        <input type="button" value="Jumlahkan" onclick="jumlah()"/>
+      </form>
+    </p>
   </body>
 </html>
