--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <h1>Massukan data via form</h1>
 
         <pre>
-          Bilangan Pertama :<input type="text" size="11" name"bilangan1"/>
-          Bilangan Kedua :<input type="text" size="11" name"bilangan2"/>
+          Bilangan Pertama :<input type="text" size="11" name="bilangan1"/>
+          Bilangan Kedua :<input type="text" size="11" name="bilangan2"/>
         </pre>
 
         <input type="button" value="Jumlahkan" onclick="jumlah()"/>
