--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       function jumlah()
         {
           var bil1 = parseFloat(document.Penghitung.bila1.value);
-          if (isNan (bil1))
+          if (isNaN (bil1))
           bil1=0.0;
           var bil2 = parseFloat(document.Penghitung.bilangan2.value);
           if (isNaN (bil2))
