--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
       function jumlah()
         {
-          var bil1 = parseFloat(document.Penghitung.bila1.value);
+          var bil1 = parseFloat(document.Penghitung.bilangan1.value);
           if (isNaN (bil1))
           bil1=0.0;
           var bil2 = parseFloat(document.Penghitung.bilangan2.value);
@@ -60,7 +60,7 @@
         <h1>Massukan data via form</h1>
 
         <pre>
-          Bilangan Pertama :<input type="text" size="11" name="bila1"/>
+          Bilangan Pertama :<input type="text" size="11" name="bilangan1"/>
           Bilangan Kedua   :<input type="text" size="11" name="bilangan2"/>
         </pre>
 
