--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       }
   </script>
 
-    <form name="Penghitung">
+    <form name="Penghitungan">
     <h1>Memasukkan data lewat prompt</h1>
 
     <input type="button" value="Masukkan Nama" onclick="namaAnda()"/>
