--- a/prak3.html
+++ b/prak3.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Santi Alya Safitri</title>
+    <title>Asrafil Ambia</title>
   </head>
   <body>
     <script language="JavaScript">
