--- a/prak4.html
+++ b/prak4.html
@@ -18,7 +18,7 @@
     <form name="Penghitung">
     <h1>Memasukkan Data Lewat Prompt</h1>
     
-    <input type="button' value="Masukkan Nama" onclick="namaAnda()"/>
+    <input type="button" value="Masukkan Nama" onclick="namaAnda()"/>
     </form>
 
     </p>
