--- a/daftarmakanan.html
+++ b/daftarmakanan.html
@@ -3,7 +3,7 @@
   <head>
     <title>Daftar Menu</title>
     <link rel="stylesheet" href="eksternal.css" type="text/css">
-    <script src="pesanan.js" defer></script> <!-- Menambahkan file JS eksternal -->
+    <script src="pesanan.js" defer></script> 
   </head>
   <body>
     <div class="header">
@@ -46,7 +46,6 @@
         </tr>
     </table>
 
-    <!-- Form Pesanan -->
     <h2>Pesanan Anda</h2>
     <form id="formPesanan">
         <input type="checkbox" id="nasiGoreng" name="makanan" value="Nasi Goreng">
