--- a/javascriptcabang.html
+++ b/javascriptcabang.html
@@ -1,1 +1,21 @@
-f
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+    <title>Variable JavaScript</title>
+  </head>
+    <body>
+      <p>
+        <script language="Javascript">
+          alert("Teradapat 3 jenis barang yang tersedia!n[1]buku\n[2]sepatu\n[3]sisir");
+          let indeksBarang = prompt("Membutuhkan jenis barang nomor berapa?");
+          if (indeksBarang < 1 || indeksBarang > 3)
+          {
+            alert("Barang Tidak Tersedia!");
+          } else {
+            alert("Barang Tersedia!, mohon ditunggu sebentar..");
+          }
+        </script>
+      </p>
+      </body>
+</html>
