--- a/javascriptarrray.html
+++ b/javascriptarrray.html
@@ -1,1 +1,29 @@
-g
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+    <title>Variable JavaScript</title>
+  </head>
+    <body>
+      <p>
+        <script language="Javascript">
+          let alatIT = ["Printer", "Stick", "Keyboard"];
+
+          document.writeln("Berikut perangkat yang terdapat dalam array: </br>");
+          document.writeln(alatIT[0] + "</br>" + alatIT[1] + "</br>" + alatIT[2] + "</br>")
+
+          const pembeli =[];
+          pembeli["nama"] = "nama pembeli";
+          pembeli["usia"] = 19;
+          pembeli["asal"] = "Asal Daerah";
+
+          document.writeln("</br>");
+          document.writeln("Berikut data pembeli yamg di-input-kan: ");
+          document.writeln("</br>" + "nama : " + pembeli["nama"] + 
+                          "</br>" + "usia : " + pembeli["usia"] + 
+                          "</br>" + "Asal Daerah : " + pembeli["asal"]);
+
+</script>
+      </p>
+    </body>
+</html>
