--- a/javascriptcabang.html
+++ b/javascriptcabang.html
@@ -7,7 +7,7 @@
     <body>
       <p>
         <script language="Javascript">
-          alert("Teradapat 3 jenis barang yang tersedia!n[1]buku\n[2]sepatu\n[3]sisir");
+          alert("Teradapat 3 jenis barang yang tersedia!\n[1]buku\n[2]sepatu\n[3]sisir");
           let indeksBarang = prompt("Membutuhkan jenis barang nomor berapa?");
           if (indeksBarang < 1 || indeksBarang > 3)
           {
