--- a/javascriptarrray.html
+++ b/javascriptarrray.html
@@ -13,9 +13,9 @@
           document.writeln(alatIT[0] + "</br>" + alatIT[1] + "</br>" + alatIT[2] + "</br>")
 
           const pembeli =[];
-          pembeli["nama"] = "nama pembeli";
+          pembeli["nama"] = "Azzahra";
           pembeli["usia"] = 19;
-          pembeli["asal"] = "Asal Daerah";
+          pembeli["asal"] = "Kedaton";
 
           document.writeln("</br>");
           document.writeln("Berikut data pembeli yamg di-input-kan: ");
