--- a/javascriptperulang.html
+++ b/javascriptperulang.html
@@ -1,1 +1,25 @@
-v
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+    <title>Variable JavaScript</title>
+  </head>
+    <body>
+      <p>
+        <script language="Javascript">
+
+          let nama = "Asrafil Ambia";
+
+          document.write("Halo " + nama + "!</br>").repeat(5));
+      </script>
+      </p>
+
+      <script>
+        let barang = ["buku", "sepatu", "sisir"];
+        for (indeks in barang) {
+        document.write("<p>barang nomor " + indeks + " : " + barang[indeks] + "</p>");
+        }
+
+      </script>
+    </body>
+</html>
