--- a/javascriptperulang.html
+++ b/javascriptperulang.html
@@ -10,14 +10,14 @@
 
           let nama = "Asrafil Ambia";
 
-          document.write("Halo " + nama + "!</br>").repeat(5));
+          document.writeln("Halo " + nama + "!</br>").repeat(5));
       </script>
       </p>
 
       <script>
         let barang = ["buku", "sepatu", "sisir"];
         for (indeks in barang) {
-        document.write("<p>barang nomor " + indeks + " : " + barang[indeks] + "</p>");
+        document.writeln("<p>barang nomor " + indeks + " : " + barang[indeks] + "</p>");
         }
 
       </script>
