--- a/javascriptcabang.html
+++ b/javascriptcabang.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
   <head>
-    <title>Variable JavaScript</title>
+    <title>JavaScript Percabangan</title>
   </head>
     <body>
       <p>
-        <script language="Javascript">
+       <script language="JavaScript">
           alert("Teradapat 3 jenis barang yang tersedia!\n[1]buku\n[2]sepatu\n[3]sisir");
           let indeksBarang = prompt("Membutuhkan jenis barang nomor berapa?");
           if (indeksBarang < 1 || indeksBarang > 3)
