--- a/javascriptperulang.html
+++ b/javascriptperulang.html
@@ -6,7 +6,7 @@
   </head>
     <body>
       <p>
-        <script language="Javascript">
+       <script language="JavaScript">
 
           let nama = "Asrafil Ambia";
 
