--- a/javascriptperulang.html
+++ b/javascriptperulang.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
   <head>
-    <title>Variable JavaScript</title>
+    <title>JavaScript Perulangan</title>
   </head>
     <body>
       <p>
