--- a/Javascriptconsole.html
+++ b/Javascriptconsole.html
@@ -1,1 +1,39 @@
-g
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+    <title>Variable JavaScript</title>
+  </head>
+    <body>
+      <p>
+        <script language="JavaScript">
+
+          function buah() {
+            const buahArr = ["Strawberry", "Mangga", "Apel", "Nanas", "Manggis"]; 
+            for (const x of buahArr) {
+              console.log(x);
+            }
+          }
+
+          buah()
+
+          let hewan1 = 'Macan'
+          let hewan2 = 'Monyet'
+
+          function hewan() {
+            let hewan1 = 'HEWAN LAIN'
+            console.log(hewan1)
+            console.log(hewan2)
+          }
+
+          console.log(hewan1)
+          console.log(hewan2)
+          hewan()
+
+            </script>
+      </p>
+    </body>
+</html>
+
+          
+          
