--- a/javascriptperulang.html
+++ b/javascriptperulang.html
@@ -10,7 +10,7 @@
 
           let nama = "Asrafil Ambia";
 
-          document.writeln("Halo " + nama + "!</br>").repeat(5));
+          document.writeln(("Halo " + nama + "!</br>").repeat(5));
       </script>
       </p>
 
