--- a/CV.html
+++ b/CV.html
@@ -18,12 +18,12 @@
             <p>No. Handphone: 082269586053</p>
         </section>
 
-        <section class="about">
+        <section class="about me">
             <h2>Tentang Saya</h2>
             <p>Saya seorang mahasiswa Universitas Lampung, program studi Pendidikan Teknologi Informasi dengan ketertarikan dalam bidang IT dan pengalaman dalam memperbaiki masalah teknis komputer. Saya aktif berorganisasi dan telah berkontribusi dalam berbagai kegiatan dan acara organisasi.</p>
         </section>
 
-        <section class="skills">
+        <section class="kemampuan">
             <h2>Kemampuan</h2>
             <ol>
                 <li>Leadership</li>
@@ -34,7 +34,7 @@
             </ol>
         </section>
 
-        <section class="language-skills">
+        <section class="skill bahasa">
             <h2>Kemampuan Bahasa</h2>
             <ul>
                 <li>Bahasa Indonesia (Lancar)</li>
@@ -42,7 +42,7 @@
             </ul>
         </section>
 
-        <section class="experience">
+        <section class="pengalaman">
             <h2>Pengalaman Kerja</h2>
             <h3>Basecamp Pro-IT – Computer Technician</h3>
             <p>Maret 2021 – Desember 2021</p>
@@ -59,7 +59,7 @@
             </ul>
         </section>
 
-        <section class="organization">
+        <section class="organisasi">
             <h2>Pengalaman Organisasi</h2>
             <h3>HIMASAKTA – Anggota Divisi</h3>
             <p>Oktober 2023 – Sekarang</p>
@@ -76,13 +76,13 @@
             </ul>
         </section>
 
-        <section class="education">
+        <section class="pendidikan">
             <h2>Riwayat Pendidikan</h2>
             <p>Universitas Lampung – S1 Pendidikan Teknologi Informasi (2023 – saat ini)</p>
             <p>IPK: 3,95/4,00</p>
         </section>
 
-        <section class="certification">
+        <section class="sertifikasi">
             <h2>Sertifikasi</h2>
             <p>Ikatan Ahli Informatika Indonesia - Sertifikat Kompetensi</p>
         </section>
